package com.promohub.app

import android.app.Application

class PromoHubApp : Application()
